--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.4.1",
+    "axios": "^0.24.0",
+    "axios-oauth-client": "^1.4.4",
+    "axios-token-interceptor": "^0.2.0",
     "core-js": "^3.6.5",
+    "echarts": "^5.2.2",
     "leaflet": "^1.7.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-axios": "^3.4.0",
+    "vue-css-donut-chart": "^2.0.0",
+    "vue-echarts": "^6.0.0",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.5.3",
     "vue2-leaflet": "^2.7.1",
