--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.23",
     "@vue/composition-api": "^1.4.1",
     "axios": "^0.24.0",
     "axios-oauth-client": "^1.4.4",
